Change game-winner text. Fix spacing to on controls area to fit screen height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,18 +98,18 @@ h5 {
 
 #controls {
     width: 100%;
-    margin: 20px auto;
+    margin: 5px auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
     height: auto;
 }
 
 #computer-choice {
     width: 85%;
-    margin: 10px auto;
+    margin: 5px auto;
     text-align: center;
 
 }
@@ -208,6 +208,7 @@ h5 {
 
 #game-winner {
     background-color: #191717;
+    text-align: center;
 }
 
 /* Instructions Section*/
